typescript/checker/tests/conformance/async/es2017/functionDeclarations/asyncFunctionDeclaration3_es2017.ts.stderr
error: Expected ident
 --> $DIR/tests/conformance/async/es2017/functionDeclarations/asyncFunctionDeclaration3_es2017.ts:3:12
  |
3 | function f(await = await) {
  |            ^^^^^

